--- a/src/main/resources/no/ntnu/mathieno/inventorymanager/product-overview.fxml
+++ b/src/main/resources/no/ntnu/mathieno/inventorymanager/product-overview.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -14,8 +15,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1024.0" prefWidth="1440.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="no.ntnu.mathieno.inventorymanager.backend.controllers.ProductOverviewController">
+<StackPane fx:controller="no.ntnu.mathieno.inventorymanager.backend.controllers.ProductOverviewController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1024.0" prefWidth="1440.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0">
          <center>
@@ -47,11 +47,11 @@
                   <VBox alignment="CENTER" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="333.0" prefWidth="216.0" spacing="5.0">
                      <children>
                         <Label text="Enter Product Name:" />
-                        <TextField prefHeight="35.0" prefWidth="205.0" />
+                        <TextField fx:id="nameField" prefHeight="35.0" prefWidth="205.0" />
                         <Label text="Enter Product Category:" />
-                        <TextField prefHeight="35.0" prefWidth="205.0" />
+                        <TextField fx:id="categoryField" prefHeight="35.0" prefWidth="205.0" />
                         <Label text="Enter Product Quantity:" />
-                        <TextField prefHeight="35.0" prefWidth="205.0" />
+                        <Spinner fx:id="quantityField" prefHeight="35.0" prefWidth="205.0" />
                      </children>
                      <padding>
                         <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
@@ -59,7 +59,7 @@
                   </VBox>
                   <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="1">
                      <children>
-                        <Button fx:id="addButton" mnemonicParsing="false" prefHeight="35.0" prefWidth="100.0" text="Add" />
+                        <Button fx:id="addButton" mnemonicParsing="false" prefHeight="35.0" prefWidth="100.0" text="Add" onAction="#addButtonHandler"/>
                         <Button fx:id="removeButton" mnemonicParsing="false" prefHeight="35.0" prefWidth="100.0" text="Remove" />
                         <Button fx:id="editButton" mnemonicParsing="false" prefHeight="35.0" prefWidth="100.0" text="Update" />
                      </children>
